deploy-sample2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld2
  namespace: sample2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aks-helloworld2
  template:
    metadata:
      labels:
        app: aks-helloworld2
    spec: 
      serviceAccountName: sample2-sa
      containers:
      - name: aks-helloworld
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld2-svc
  namespace: sample2
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld2
