ingress-sample1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/use-osm-mtls: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: |2-

      proxy_ssl_name "default.sample1.cluster.local";
    nginx.ingress.kubernetes.io/proxy-ssl-secret: osm-system/nginx-client-cert-for-talking-to-osm
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
  name: sample1-ingress
  namespace: sample1
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls: 
  - hosts: 
    - mysite.srinman.com
    secretName: mysite-tls
  rules:
  - host: mysite.srinman.com
    http:
      paths:
      - backend:
          service:
            name: aks-helloworld-svc
            port:
              number: 80
        path: /
        pathType: Prefix
