ingress-sample3.yaml
# simple ingress definition to route traffic directly to app without OSM
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: sample3-ingress
  namespace: sample3
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: mysite3.srinman.com
    http:
      paths:
      - backend:
          service:
            name: aks-helloworld3-svc
            port:
              number: 80
        path: /
        pathType: Prefix
